src/test/ui/duplicate/dupe-symbols-7.stderr
error: entry symbol `main` defined multiple times
  --> $DIR/dupe-symbols-7.rs:10:1
   |
LL | fn main(){}
   | ^^^^^^^^^^^
   |
   = help: did you use #[no_mangle] on `fn main`? Use #[start] instead

error: aborting due to previous error

