src/test/ui/duplicate/dupe-symbols-7.rs
//
// error-pattern: entry symbol `main` defined multiple times

// FIXME https://github.com/rust-lang/rust/issues/59774
// normalize-stderr-test "thread.*panicked.*Metadata module not compiled.*\n" -> ""
// normalize-stderr-test "note:.*RUST_BACKTRACE=1.*\n" -> ""
#![allow(warnings)]

#[no_mangle]
fn main(){}
